@@ -1,67 +1,59 @@
-package com.athena.cases.lookup;
+package com.athena.cases.features.billing.lookup;
 
 import com.athena.cases.casemanagement.CaseEntity;
 import com.athena.cases.casemanagement.CaseRepository;
 import com.athena.cases.common.constants.PermissionCodes;
 import com.athena.cases.common.exception.ForbiddenException;
+import com.athena.cases.features.billing.enums.BillingHoldLevelCode;
+import com.athena.cases.features.billing.enums.BillingHoldType;
 import com.athena.cases.identity.entity.CaseTypeEntity;
 import com.athena.cases.identity.repository.CaseTypeRepository;
+import com.athena.cases.lookup.LookupItem;
 import com.athena.cases.security.CurrentUserService;
 import com.athena.cases.security.UserPrincipal;
-import java.util.Comparator;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
-import java.util.Map;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
-public class LookupServiceImpl implements LookupService {
+public class BillingLookupServiceImpl implements BillingLookupService {
 
     private static final int PARENT_CASE_LOOKUP_LIMIT = 200;
 
-    private static final Map<String, Integer> CASE_TYPE_DISPLAY_ORDER = Map.of(
-            "DBM_WORK_ORDER_REQUEST", 1,
-            "EXRT_REQUEST", 2,
-            "BILLING_DEPARTMENT_REQUEST", 3);
-
-    private final CaseTypeRepository caseTypeRepository;
     private final CaseRepository caseRepository;
+    private final CaseTypeRepository caseTypeRepository;
     private final CurrentUserService currentUserService;
 
-    public LookupServiceImpl(
-            CaseTypeRepository caseTypeRepository,
+    public BillingLookupServiceImpl(
             CaseRepository caseRepository,
+            CaseTypeRepository caseTypeRepository,
             CurrentUserService currentUserService
     ) {
-        this.caseTypeRepository = caseTypeRepository;
         this.caseRepository = caseRepository;
+        this.caseTypeRepository = caseTypeRepository;
         this.currentUserService = currentUserService;
     }
 
     @Override
-    public List<LookupItem> searchClients(String query) {
-        return LookupMockData.filterByQuery(LookupMockData.CLIENTS, query);
-    }
-
-    @Override
-    public List<LookupItem> listActiveCampaigns() {
-        return LookupMockData.CAMPAIGNS;
-    }
-
-    @Override
-    public List<LookupItem> listSegments(String clientId) {
-        return LookupMockData.segmentsForClient(clientId);
+    public List<LookupItem> listCampaigns() {
+        // TEMP: Replace with shared lookup API when available.
+        return BillingLookupMockData.CAMPAIGNS;
     }
 
     @Override
     public List<LookupItem> listProducts(String query) {
-        return LookupMockData.filterByQuery(LookupMockData.PRODUCTS, query);
+        // TEMP: Replace with shared lookup API when available.
+        return BillingLookupMockData.filterByQuery(BillingLookupMockData.PRODUCTS, query);
     }
 
-    /**
-     * Real cases the caller may access — {@code id} is {@code cases.id} for parentCaseId FK validation.
-     */
+    @Override
+    public List<LookupItem> listSegments(String clientId) {
+        // TEMP: Replace with shared lookup API when available.
+        return BillingLookupMockData.segmentsForClient(clientId);
+    }
+
     @Override
     @Transactional(readOnly = true)
     public List<LookupItem> findParentCases(String query) {
@@ -90,41 +82,16 @@ public class LookupServiceImpl implements LookupService {
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public List<LookupItem> listAuthorizedCaseTypes() {
-        if (!(currentUserService.hasPermission(PermissionCodes.CASES_CREATE)
-                || currentUserService.hasPermission(PermissionCodes.CASES_ACCESS))) {
-            throw new ForbiddenException("CASES_CREATE required");
-        }
-
-        UserPrincipal principal = currentUserService.requirePrincipal();
-        List<String> authorizedCodes = principal.getCaseTypeCodes();
-        if (authorizedCodes.isEmpty()) {
-            return List.of();
-        }
-
-        return caseTypeRepository.findByCodeInAndActiveTrue(authorizedCodes).stream()
-                .sorted(Comparator
-                        .comparingInt((CaseTypeEntity ct) ->
-                                CASE_TYPE_DISPLAY_ORDER.getOrDefault(ct.getCode(), 100))
-                        .thenComparing(CaseTypeEntity::getName))
-                .map(ct -> new LookupItem(String.valueOf(ct.getId()), ct.getCode(), ct.getName()))
-                .toList();
+    public List<BillingHoldLevelCode> listHoldLevels(BillingHoldType holdType) {
+        // TODO Replace after BA finalizes Hold Type → Level matrix — interim flat set
+        return Arrays.asList(BillingHoldLevelCode.values());
     }
 
     @Override
-    public List<LookupItem> listActiveClients() {
-        return LookupMockData.CLIENTS;
-    }
-
-    @Override
-    public List<EventIdLookupItem> listActiveEventIds() {
-        return LookupMockData.EVENT_IDS;
-    }
-
-    @Override
-    public List<LookupItem> listActiveSpokenKeys() {
-        return LookupMockData.SPOKEN_KEYS;
+    public List<LookupItem> listAssignees() {
+        // TEMP: Replace with shared lookup API when available —
+        // billing-access users are not exposed on LookupService yet.
+        return List.of();
     }
 
     private void requireCasesRead() {
